# x402-route-kernel

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
backend/: .env.example  package.json
backend/src/: index.ts
backend/src/middleware/: paymentRequired.ts
backend/src/routes/: payment.ts
backend/src/services/: facilitator.ts
backend/src/types/: index.ts
contracts/agent-guard-wallet/: Cargo.toml
contracts/agent-guard-wallet/src/: lib.rs  test.rs
contracts/passkey-validator/: Cargo.toml
contracts/passkey-validator/src/: lib.rs  test.rs
sdk/: package.json
sdk/src/: index.ts
